Source/Alternet.UI.Pal/Api/ImageSet.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "ImageSet.h"
#include "InputStream.h"
#include "Image.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API ImageSet* ImageSet_Create_()
{
    return MarshalExceptions<ImageSet*>([&](){
        return new ImageSet();
    });
}

ALTERNET_UI_API c_bool ImageSet_GetIsOk_(ImageSet* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsOk();
    });
}

ALTERNET_UI_API c_bool ImageSet_GetIsReadOnly_(ImageSet* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetIsReadOnly();
    });
}

ALTERNET_UI_API SizeI_C ImageSet_GetDefaultSize_(ImageSet* obj)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetDefaultSize();
    });
}

ALTERNET_UI_API void ImageSet_LoadFromStream_(ImageSet* obj, void* stream)
{
    MarshalExceptions<void>([&](){
        obj->LoadFromStream(stream);
    });
}

ALTERNET_UI_API void ImageSet_AddImage_(ImageSet* obj, Image* image)
{
    MarshalExceptions<void>([&](){
        obj->AddImage(image);
    });
}

ALTERNET_UI_API void ImageSet_Clear_(ImageSet* obj)
{
    MarshalExceptions<void>([&](){
        obj->Clear();
    });
}

ALTERNET_UI_API void ImageSet_LoadSvgFromStream_(ImageSet* obj, void* stream, int width, int height, Color color)
{
    MarshalExceptions<void>([&](){
        obj->LoadSvgFromStream(stream, width, height, color);
    });
}

ALTERNET_UI_API void ImageSet_LoadSvgFromString_(ImageSet* obj, const char16_t* s, int width, int height, Color color)
{
    MarshalExceptions<void>([&](){
        obj->LoadSvgFromString(s, width, height, color);
    });
}

ALTERNET_UI_API void ImageSet_InitImage_(ImageSet* obj, Image* image, int width, int height)
{
    MarshalExceptions<void>([&](){
        obj->InitImage(image, width, height);
    });
}

ALTERNET_UI_API void ImageSet_InitImageFor_(ImageSet* obj, Image* image, void* window)
{
    MarshalExceptions<void>([&](){
        obj->InitImageFor(image, window);
    });
}

ALTERNET_UI_API SizeI_C ImageSet_GetPreferredBitmapSizeAtScale_(ImageSet* obj, float scale)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetPreferredBitmapSizeAtScale(scale);
    });
}

ALTERNET_UI_API SizeI_C ImageSet_GetPreferredBitmapSizeFor_(ImageSet* obj, void* window)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetPreferredBitmapSizeFor(window);
    });
}